Replaces usages of 'collections.' with java9 API, (#5784)
EG: Collections.emptyMap() -> Map.of()